--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 <br>
 <h3 class=
 "abouttext">
-Hi! I’m a junior at the University of Chicago triple majoring in History, Law Letters, and Geography. This summer I interned in alternative asset management at LuminArx Capital in New York. In my free time I love learning foreign languages, exploring different neighborhoods, and painting!
+Hi! I’m a junior at the University of Chicago triple majoring in History, Law Letters, and Geography. I have a Belgian Sheepdog named Mouse. In my free time I love learning foreign languages, exploring different neighborhoods, and painting!
 </h3>
 <h3 style="text-align: center;">
     <br>
