Major website updates: rename portfolio to art, add blog functionality, enhance projects interactivity, and improve UI animations

--- a/about.html
+++ b/about.html
@@ -6,24 +6,42 @@
     <link rel="shortcut icon" href="ndlicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noah Darwin Lee</title>
+    <style>
+        .reach-out-link {
+            color: #e3e3b0;
+            font-size: 20px;
+            font-weight: bold;
+            text-decoration: none;
+            margin: 40px auto 100px auto;
+            padding: 12px 60px;
+            background-color: #e68019;
+            width: 100px;
+            border: 2px solid;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-sizing: border-box;
+        }
+
+        .reach-out-link:hover {
+            filter: brightness(1.05) drop-shadow(0px 0px 3px #e3e3b0);
+            background-color: #e68019;
+        }
+
+    </style>
 </head>
 <body>
     <div class="header">
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="portfolio.html" class="header-nav-button">
-                    <span>Portfolio</span>
+                <a href="art.html" class="header-nav-button">
+                    <span>Art</span>
                 </a>
             </li>
             <li>
                 <a href="projects.html" class="header-nav-button">
                     <span>Projects</span>
-                </a>
-            </li>
-            <li>
-                <a href="blog.html" class="header-nav-button">
-                    <span>Blog</span>
                 </a>
             </li>
             <li>
@@ -56,21 +74,10 @@
 <br>
 <h3 class=
 "abouttext">
-Hi! I’m a junior at the University of Chicago triple majoring in History, Law Letters, and Geography. I have a Belgian Sheepdog named Mouse. In my free time I love learning foreign languages, exploring different neighborhoods, and painting!
+My name is Noah and I’m a junior at the University of Chicago studying History, Law Letters, and Geography. In my free time I love learning foreign languages, exploring different neighborhoods, and painting!
 </h3>
-<h3 style="text-align: center;">
-    <br>
-    <a href="https://drive.google.com/file/d/1MkiAALQcEMPENYxFbsl9MBfa-a7vdeLA/view?usp=sharing">
-        <h3 class="abouttext" style="color:#e3e3b0" id="resumebutton">
-        RESUME
-        </h3>
-    </a>
-—
-</h3>
-<br>
-<h3 class="abouttext">
-Site coded in VS Code. 
-</h3>
+
+<a href="contact.html" class="reach-out-link">Contact</a>
 
 <!--below is the footer-->
 
@@ -93,8 +100,9 @@ Site coded in VS Code.
     align-items: center;
     background: linear-gradient(transparent, #e68019, #e68019, #e68019);
     z-index: 9;">
-    <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2024</span>
+    <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
 </a>
 </div>
+
     </body>
     </html>
