--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,13 @@
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="portfolio.html" class="header-nav-button">
-                    <span>Portfolio</span>
+                <a href="art.html" class="header-nav-button">
+                    <span>Art</span>
                 </a>
             </li>
             <li>
                 <a href="projects.html" class="header-nav-button">
                     <span>Projects</span>
-                </a>
-            </li>
-            <li>
-                <a href="blog.html" class="header-nav-button">
-                    <span>Blog</span>
                 </a>
             </li>
             <li>
@@ -97,7 +92,27 @@
     </div>    
 
     <!--below is the footer-->
+    <div class="footer">
+        <a class="header-nav-button" style="position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-bottom: 22px;
+        padding-top: 25px;
+        padding-left: 3.4%;
+        margin-left: -.4%;
+        color: #e3e3b0;
+        font-size: x-small;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        background: linear-gradient(transparent, #e68019, #e68019, #e68019);
+        z-index: 9;">
+        <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
+    </a>
+    </div>
 
-<div class="footer"><span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2024</span></div>
+    </a>
+    </div>
     </body>
     </html>
