--- a/projects.html
+++ b/projects.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noah Darwin Lee</title>
 </head>
-<body>
+<body style="background-color: #e68019;">
     <div class="header">
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="portfolio.html" class="header-nav-button">
-                    <span>Portfolio</span>
+                <a href="art.html" class="header-nav-button">
+                    <span>Art</span>
                 </a>
             </li>
             <li>
@@ -21,11 +21,7 @@
                     <span>[Projects]</span>
                 </a>
             </li>
-            <li>
-                <a href="blog.html" class="header-nav-button">
-                    <span>Blog</span>
-                </a>
-            </li>
+
             <li>
                 <a href="contact.html" class="header-nav-button">
                     <span>Contact</span>
@@ -75,24 +71,47 @@
             DialectDict
         </h3>
     </a>
-    <h4 class="project1">
-        The internet's first-ever crowdsourced Fuzhounese-English dictionary featuring hundreds of words and characters with full audio support. Fuzhounese is a shrinking dialect of Chinese spoken in Fujian Province as well as by diaspora across the world
-    </h4>
+    <a href="http://dialectdict.com/">
+        <h4 class="project1">
+            [website being updated] &nbsp; <br><br>The internet's first-ever crowdsourced Fuzhounese-English dictionary featuring hundreds of words and characters with full audio support. Fuzhounese is a shrinking dialect of Chinese spoken in Fujian Province as well as by diaspora across the world
+        </h4>
+    </a>
     <br>
 </div>
 
 <div class="projects2">
     <a href="https://spatial.uchicago.edu/spatial-at-uchicago/student-orgs/geographic-studies-club">
-    <img src="projectimages/ucgeologo.png" style="width:155px; height:100px;" class="projectimages">
+    <img src="projectimages/ucgeologo.png" style="width: 110px; height:121px;" class="projectimages">
     </a>
     <a href="https://spatial.uchicago.edu/spatial-at-uchicago/student-orgs/geographic-studies-club">
         <h3 class="project">
             UCGEO
         </h3>
     </a>
-    <h4 class="project1">
-        Co-founded the University of Chicago's Geographic Studies Club for undergraduate students to learn about geography and geographic information science through lectures, field trips to consulates, and events. 
-    </h4>
+    <a href="https://spatial.uchicago.edu/spatial-at-uchicago/student-orgs/geographic-studies-club">
+        <h4 class="project1">
+            Founded the University of Chicago's Geographic Studies Club for undergraduate students to learn about geography and geographic information science through lectures, field trips to consulates, and events
+        </h4>
+    </a>
+    <br>
+</div>
+
+
+
+<div class="projects3">
+    <a href="dutch.html">
+    <img src="projectimages/dutchtulip.png" style="width:170px; height:100px; margin-top:10px; margin-bottom: -15px" class="projectimages">
+    </a>
+    <a href="dutch.html">
+        <h3 class="project">
+            UChicago Dutch Language Circle
+        </h3>
+    </a>
+    <a href="dutch.html">
+        <h4 class="project1">
+            Weekly Dutch language learning club for all levels. We meet Wednesdays at 7:30PM in Crerar 010B
+        </h4>
+    </a>
     <br>
 </div>
 
@@ -102,12 +121,31 @@
     </a>
     <a href="https://www.youtube.com/channel/UCZXkNV0sGgZxuoR_90mScdA">
         <h3 class="project">
-            My Youtube Channel
+            Youtube
         </h3>
     </a>
-    <h4 class="project1">
-        I post recordings of my 3D renderings of architectural models as well as personal short films
-    </h4>
+    <a href="https://www.youtube.com/channel/UCZXkNV0sGgZxuoR_90mScdA">
+        <h4 class="project1">
+            I post recordings of my 3D renderings of architectural models
+        </h4>
+    </a>
+    <br>
+</div>
+
+<div class="projects5blog">
+    <a href="blog.html">
+    <img src="projectimages/expologo.png" style="width:100px; height:100px;" class="projectimages">
+    </a>
+    <a href="blog.html">
+        <h3 class="project">
+            Blog
+        </h3>
+    </a>
+    <a href="blog.html">
+        <h4 class="project1">
+            My thoughts on politics, languages, and unrealpolitics
+        </h4>
+    </a>
     <br>
 </div>
 
@@ -126,9 +164,11 @@
             Geographic Jokes in the Schengen Area: National Borders for Sadists
         </h3>
     </a>
-    <h4 class="project1">
-        An analytical, semi-satirical take on the state of the Schengen Area and its ideals of free movement in expectation versus reality, exploring darkly humorous contradictions within Schengen as it relates to borders, migration, and access
-    </h4>
+    <a href="https://drive.google.com/file/d/1PfbpcodltkzRr1ydfXBVvs7eb5CzRaHo/view">
+        <h4 class="project1">
+            An analytical, semi-satirical take on the state of the Schengen Area and its ideals of free movement in expectation versus reality, exploring darkly humorous contradictions within Schengen as it relates to borders, migration, and access
+        </h4>
+    </a>
     <br>
 </div>
 
@@ -141,9 +181,11 @@
             Metro Access and Accessibility in Los Angeles's Arts District and Boyle Heights
         </h3>
     </a>
-    <h4 class="project1">
-        The newly-completed Sixth Street Viaduct Bridge connecting Los Angeles's Arts District and Boyle Heights neighborhoods presents an interesting spatial challenge for the city's Metro system. I used GIS to map the Bridge's surrounding communities' Metro networks and generated my own proposal for an alternate spatial layout based on accessibility, access, and population data
-    </h4>
+    <a href="https://drive.google.com/file/d/1vHFOhu_gF2WAi336e1inayNdm0yqcK9-/view">
+        <h4 class="project1">
+            The newly-completed Sixth Street Viaduct Bridge connecting Los Angeles's Arts District and Boyle Heights neighborhoods presents an interesting spatial challenge for the city's Metro system. I used GIS to map the Bridge's surrounding communities' Metro networks and generated my own proposal for an alternate spatial layout based on accessibility, access, and population data
+        </h4>
+    </a>
     <br>
 </div>
 
@@ -156,19 +198,39 @@
             Facilitating a Unified Approach to COVID-19 Mitigation Efforts at the US State and Regional Level: An Analysis of Best Practices
         </h3>
     </a>
-    <h4 class="project1">
-        Authored paper on COVID-19 policy recommendations for US jurisdictions under the guidance of Joe Colombano, Director of the Office of the Special Adviser on the 2030 Agenda for Sustainable Development in the Executive Office of the Secretary-General of the United Nations. Paper was read by World Health Organization Director-General Special Envoy for COVID-19, Dr. David Nabarro
-    </h4>
+    <a href="https://drive.google.com/file/d/1qIJ-SUqkAjiCbNq73GR5W-Ca3ZSBxSxJ/view">
+        <h4 class="project1">
+            Authored paper on COVID-19 policy recommendations for US jurisdictions under the guidance of Joe Colombano, Director of the Office of the Special Adviser on the 2030 Agenda for Sustainable Development in the Executive Office of the Secretary-General of the United Nations. Paper was read by World Health Organization Director-General Special Envoy for COVID-19, Dr. David Nabarro
+        </h4>
+    </a>
     <br>
 </div>
 
 </div>
 
+    <!--below is the extra endspace and footer-->
 <div class="endspacesmall">
 </div>
-
-    <!--below is the footer-->
-
-<div class="footer"><span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2024</span></div>
+    
+<div class="footer">
+    <a class="header-nav-button" style="position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-bottom: 22px;
+    padding-top: 25px;
+    padding-left: 3.4%;
+    margin-left: -.4%;
+    color: #e3e3b0;
+    font-size: x-small;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    background: linear-gradient(transparent, #e68019, #e68019, #e68019);
+    z-index: 9;">
+    <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
+</a>
+</div>
+      
     </body>
     </html>
