--- a/about.html
+++ b/about.html
@@ -74,34 +74,15 @@
 <br>
 <h3 class=
 "abouttext">
-My name is Noah and I’m a junior at the University of Chicago studying History, Law Letters, and Geography. In my free time I love learning foreign languages, exploring different neighborhoods, and painting!
+My name is Noah and I’m a senior at the University of Chicago studying History, Law Letters, and Geography. In my free time I love learning foreign languages, exploring different neighborhoods, and painting!
 </h3>
 
 <a href="contact.html" class="reach-out-link">Contact</a>
 
 <!--below is the footer-->
 
-<div class="endspacesmall">
-</div>
-
-<div class="footer">
-    <a class="header-nav-button" style="position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding-bottom: 22px;
-    padding-top: 25px;
-    padding-left: 3.4%;
-    margin-left: -.4%;
-    color: #e3e3b0;
-    font-size: x-small;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    background: linear-gradient(transparent, #e68019, #e68019, #e68019);
-    z-index: 9;">
+<div class="footer about-footer">
     <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
-</a>
 </div>
 
     </body>
