--- a/projects.html
+++ b/projects.html
@@ -160,7 +160,7 @@
 </div>
 
 <div class="projects2">
-    <a href="https://spatial.uchicago.edu/spatial-at-uchicago/student-orgs/geographic-studies-club">
+    <a href="https://ucgeo.org/">
     <img src="projectimages/ucgeologo.png" style="width: 110px; height:121px;" class="projectimages">
     </a>
     <a href="https://spatial.uchicago.edu/spatial-at-uchicago/student-orgs/geographic-studies-club">
