Update Dutch language content and project images

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ function change(){
 
     <!--below is the footer-->
 
-    <div class="footer">
-                <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
+    <div class="footer about-footer">
+        <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
     </div>
 
     </body>
