--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,7 @@
 
 <div class="projects3">
     <a href="dutch.html">
-    <img src="projectimages/dutchtulip.png" style="width:170px; height:100px; margin-top:10px; margin-bottom: -15px" class="projectimages">
+    <img src="projectimages/dlclogo.png" style="width:170px; height:100px; margin-top:10px; margin-bottom: -2px" class="projectimages">
     </a>
     <a href="dutch.html">
         <h3 class="project">
@@ -231,7 +231,7 @@
 
 <div class="publications">
     <h3 style="font-size:larger; margin-left: -.3%;">
-        Publications:
+        Research:
     </h3>
 </div>
 
