Update favicon to websiteiconndl.png
- Changed favicon reference in all HTML files from ndlicon.png to websiteiconndl.png
- Added .htaccess file for clean URLs (remove .html extensions)

--- a/dutch.html
+++ b/dutch.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sora">
     <link href='style.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="ndlicon.png">
+    <link rel="shortcut icon" href="websiteiconndl.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UChicago Dutch Language Circle - Noah Darwin Lee</title>
 </head>
