--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sora">
     <link href='style.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="ndlicon.png">
+    <link rel="shortcut icon" href="websiteiconndl.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noah Darwin Lee</title>
 </head>
