Add gallery functionality to Grand Central Pagoda
- Added 4-image gallery to Grand Central Pagoda (grandcentral2, grandcentral3, grandcentral4, Grand Central Pagoda)
- Implemented same gallery structure as Triptych with navigation arrows
- Added descriptive titles for each view in the gallery

--- a/art.html
+++ b/art.html
@@ -246,7 +246,13 @@ function scrollToTop() {
         <p class="portfoliodescriptions4">October 2, 2020</p>
     </div>
     <div id="9/2/20" data-category="buildings">
-            <img src="portfolioimages/Grand Central Pagoda.jpg" id="Grand Central Pagoda" class="portfolioimage clickable-img" data-full="portfolioimages/Grand Central Pagoda.jpg">
+            <img src="portfolioimages/Grand Central Pagoda.jpg" 
+            id="Grand Central Pagoda" 
+            class="portfolioimage clickable-img" 
+            data-index="0" 
+            data-images="portfolioimages/Grand Central Pagoda.jpg, portfolioimages/grandcentral2.jpg, portfolioimages/grandcentral3.jpg, portfolioimages/grandcentral4.jpg"
+            data-titles="1/4 - &quot;Grand Central Pagoda&quot;, 2/4 - &quot;Grand Central Pagoda - View 2&quot;, 3/4 - &quot;Grand Central Pagoda - View 3&quot;, 4/4 - &quot;Grand Central Pagoda - View 4&quot;"
+            data-full="portfolioimages/Grand Central Pagoda.jpg" />
         <p class="portfoliodescriptions1">"Grand Central Pagoda"</p>
         <p class="portfoliodescriptions2">Made with SketchUp</p>
         <p class="portfoliodescriptions4">September 2, 2020</p>
