Fix Grand Central Pagoda view 2 image extension
- Changed grandcentral2.jpg to grandcentral2.png to match actual file format
- This fixes the broken view 2 image in the gallery

--- a/art.html
+++ b/art.html
@@ -250,7 +250,7 @@ function scrollToTop() {
             id="Grand Central Pagoda" 
             class="portfolioimage clickable-img" 
             data-index="0" 
-            data-images="portfolioimages/Grand Central Pagoda.jpg, portfolioimages/grandcentral2.jpg, portfolioimages/grandcentral3.jpg, portfolioimages/grandcentral4.jpg"
+            data-images="portfolioimages/Grand Central Pagoda.jpg, portfolioimages/grandcentral2.png, portfolioimages/grandcentral3.jpg, portfolioimages/grandcentral4.jpg"
             data-titles="1/4 - &quot;Grand Central Pagoda&quot;, 2/4 - &quot;Grand Central Pagoda - View 2&quot;, 3/4 - &quot;Grand Central Pagoda - View 3&quot;, 4/4 - &quot;Grand Central Pagoda - View 4&quot;"
             data-full="portfolioimages/Grand Central Pagoda.jpg" />
         <p class="portfoliodescriptions1">"Grand Central Pagoda"</p>
