Position lightbox arrows relative to title text
- Moved navigation arrows to be directly under caption in HTML structure
- Created lightbox-navigation container using flexbox layout
- Arrows now always appear one line under the title text regardless of image size
- Applies to all galleries (Grand Central Pagoda and Triptych)

--- a/art.html
+++ b/art.html
@@ -308,14 +308,14 @@ function scrollToTop() {
 <div id="lightbox" class="lightbox hidden">
     <span class="lightbox-close">&times;</span>
     <div class="lightbox-inner">
-      <button id="prevBtn" class="lightbox-nav left">&#10094;</button>
-      
       <div class="lightbox-content">
         <img id="lightbox-img" src="" alt="">
         <div id="lightbox-caption" class="lightbox-caption"></div>
+        <div class="lightbox-navigation">
+          <button id="prevBtn" class="lightbox-nav left">&#10094;</button>
+          <button id="nextBtn" class="lightbox-nav right">&#10095;</button>
+        </div>
       </div>
-  
-      <button id="nextBtn" class="lightbox-nav right">&#10095;</button>
     </div>
   </div>
   
