Add gallery functionality to Crown Building
- Added 3-image gallery to Crown Building (Crown Building.jpg, crownbuilding2.png, crownbuilding3.png)
- Implemented same gallery structure as other galleries with navigation arrows
- Added descriptive titles for each view in the gallery

--- a/art.html
+++ b/art.html
@@ -264,7 +264,13 @@ function scrollToTop() {
         <p class="portfoliodescriptions4">August 5, 2020</p>
     </div>
     <div id="7/18/20" data-category="buildings">
-            <img src="portfolioimages/Crown Building.jpg" id="Crown Building" class="portfolioimage clickable-img" data-full="portfolioimages/Crown Building.jpg">
+            <img src="portfolioimages/Crown Building.jpg" 
+            id="Crown Building" 
+            class="portfolioimage clickable-img" 
+            data-index="0" 
+            data-images="portfolioimages/Crown Building.jpg, portfolioimages/crownbuilding2.png, portfolioimages/crownbuilding3.png"
+            data-titles="1/3 - &quot;Crown Building&quot;, 2/3 - &quot;Crown Building - View 2&quot;, 3/3 - &quot;Crown Building - View 3&quot;"
+            data-full="portfolioimages/Crown Building.jpg" />
         <p class="portfoliodescriptions1">"Crown Building"</p>
         <p class="portfoliodescriptions2">Made with SketchUp</p>
         <p class="portfoliodescriptions4">July 18, 2020</p>
