Add gallery functionality to 3 Park Avenue
- Added 5-image gallery to 3 Park Avenue (3 Park Avenue.png, 3parkavenue2.png, 3parkavenue3.png, 3parkavenue4.png, 3parkavenue5.png)
- Implemented same gallery structure as other galleries with navigation arrows
- Added descriptive titles for each view in the gallery

--- a/art.html
+++ b/art.html
@@ -258,7 +258,13 @@ function scrollToTop() {
         <p class="portfoliodescriptions4">September 2, 2020</p>
     </div>
     <div id="8/5/20" data-category="buildings">
-            <img src="portfolioimages/3 Park Avenue.png" id="3 Park Avenue" class="portfolioimage clickable-img" data-full="portfolioimages/3 Park Avenue.png">
+            <img src="portfolioimages/3 Park Avenue.png" 
+            id="3 Park Avenue" 
+            class="portfolioimage clickable-img" 
+            data-index="0" 
+            data-images="portfolioimages/3 Park Avenue.png, portfolioimages/3parkavenue2.png, portfolioimages/3parkavenue3.png, portfolioimages/3parkavenue4.png, portfolioimages/3parkavenue5.png"
+            data-titles="1/5 - &quot;3 Park Avenue&quot;, 2/5 - &quot;3 Park Avenue - View 2&quot;, 3/5 - &quot;3 Park Avenue - View 3&quot;, 4/5 - &quot;3 Park Avenue - View 4&quot;, 5/5 - &quot;3 Park Avenue - View 5&quot;"
+            data-full="portfolioimages/3 Park Avenue.png" />
         <p class="portfoliodescriptions1">"3 Park Avenue"</p>
         <p class="portfoliodescriptions2">Made with SketchUp</p>
         <p class="portfoliodescriptions4">August 5, 2020</p>
