Fix 3 Park Avenue gallery image extensions
- Changed 3parkavenue2.png to 3parkavenue2.jpg
- Changed 3parkavenue3.png to 3parkavenue3.jpg
- Changed 3parkavenue5.png to 3parkavenue5.jpg
- Fixes broken gallery images by using correct file extensions

--- a/art.html
+++ b/art.html
@@ -262,7 +262,7 @@ function scrollToTop() {
             id="3 Park Avenue" 
             class="portfolioimage clickable-img" 
             data-index="0" 
-            data-images="portfolioimages/3 Park Avenue.png, portfolioimages/3parkavenue2.png, portfolioimages/3parkavenue3.png, portfolioimages/3parkavenue4.png, portfolioimages/3parkavenue5.png"
+            data-images="portfolioimages/3 Park Avenue.png, portfolioimages/3parkavenue2.jpg, portfolioimages/3parkavenue3.jpg, portfolioimages/3parkavenue4.png, portfolioimages/3parkavenue5.jpg"
             data-titles="1/5 - &quot;3 Park Avenue&quot;, 2/5 - &quot;3 Park Avenue - View 2&quot;, 3/5 - &quot;3 Park Avenue - View 3&quot;, 4/5 - &quot;3 Park Avenue - View 4&quot;, 5/5 - &quot;3 Park Avenue - View 5&quot;"
             data-full="portfolioimages/3 Park Avenue.png" />
         <p class="portfoliodescriptions1">"3 Park Avenue"</p>
