--- a/art.html
+++ b/art.html
@@ -262,8 +262,8 @@ function scrollToTop() {
             id="3 Park Avenue" 
             class="portfolioimage clickable-img" 
             data-index="0" 
-            data-images="portfolioimages/3 Park Avenue.png, portfolioimages/3parkavenue2.jpg, portfolioimages/3parkavenue3.jpg, portfolioimages/3parkavenue4.png, portfolioimages/3parkavenue5.jpg"
-            data-titles="1/5 - &quot;3 Park Avenue&quot;, 2/5 - &quot;3 Park Avenue - View 2&quot;, 3/5 - &quot;3 Park Avenue - View 3&quot;, 4/5 - &quot;3 Park Avenue - View 4&quot;, 5/5 - &quot;3 Park Avenue - View 5&quot;"
+            data-images="portfolioimages/3 Park Avenue.png, portfolioimages/3parkavenue2.jpg, portfolioimages/3parkavenue3.jpg, portfolioimages/3parkavenue4.png"
+            data-titles="1/4 - &quot;3 Park Avenue&quot;, 2/4 - &quot;3 Park Avenue - View 2&quot;, 3/4 - &quot;3 Park Avenue - View 3&quot;, 4/4 - &quot;3 Park Avenue - View 4&quot;"
             data-full="portfolioimages/3 Park Avenue.png" />
         <p class="portfoliodescriptions1">"3 Park Avenue"</p>
         <p class="portfoliodescriptions2">Made with SketchUp</p>
