--- a/about.html
+++ b/about.html
@@ -35,22 +35,22 @@
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="art.html" class="header-nav-button">
+                <a href="art" class="header-nav-button">
                     <span>Art</span>
                 </a>
             </li>
             <li>
-                <a href="projects.html" class="header-nav-button">
+                <a href="projects" class="header-nav-button">
                     <span>Projects</span>
                 </a>
             </li>
             <li>
-                <a href="contact.html" class="header-nav-button">
+                <a href="contact" class="header-nav-button">
                     <span>Contact</span>
                 </a>
             </li>
             <li>
-                <a href="about.html" class="header-nav-button" style="color:#ffffff">
+                <a href="about" class="header-nav-button" style="color:#ffffff">
                     <span>[About]</span>
                 </a>
             </li>
@@ -62,7 +62,7 @@
     </div>
     <script>
         function mainMenu() {
-            window.location.href = "index.html";
+            window.location.href = "/";
     }
     </script>
 
@@ -77,7 +77,7 @@
 My name is Noah and I’m a senior at the University of Chicago studying History, Law Letters, and Geography. In my free time I love learning foreign languages, exploring different neighborhoods, and painting!
 </h3>
 
-<a href="contact.html" class="reach-out-link">Contact</a>
+<a href="contact" class="reach-out-link">Contact</a>
 
 <!--below is the footer-->
 
