--- a/blog.html
+++ b/blog.html
@@ -11,27 +11,27 @@
     <div class="header">
         <br class="topbit">
         <div class="header-nav">
-          <li>
-            <a href="art.html" class="header-nav-button">
-                <span>Art</span>
-            </a>
-        </li>
-        <li>
-            <a href="projects.html" class="header-nav-button" style="color:#ffffff">
-                <span>[Projects]</span>
-            </a>
-        </li>
+                      <li>
+                <a href="art" class="header-nav-button">
+                    <span>Art</span>
+                </a>
+            </li>
+            <li>
+                <a href="projects" class="header-nav-button" style="color:#ffffff">
+                    <span>[Projects]</span>
+                </a>
+            </li>
 
-        <li>
-            <a href="contact.html" class="header-nav-button">
-                <span>Contact</span>
-            </a>
-        </li>
-        <li>
-            <a href="about.html" class="header-nav-button">
-                <span>About</span>
-            </a>
-        </li>
+            <li>
+                <a href="contact" class="header-nav-button">
+                    <span>Contact</span>
+                </a>
+            </li>
+            <li>
+                <a href="about" class="header-nav-button">
+                    <span>About</span>
+                </a>
+            </li>
             <div class="header-icon">
                 <img src="ndlicon.png" class="header-icon" onclick="mainMenu()">
             </div>
@@ -41,10 +41,10 @@
     
     <script>
         function mainMenu() {
-            window.location.href="index.html";
+            window.location.href="/";
         }
         function backToProjects() {
-            window.location.href="projects.html";
+            window.location.href="projects";
         }
 
         // Header scroll behavior
