--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         function mainMenu() {
-            window.location.href = "index.html";
+            window.location.href = "/";
         }
         
         function toggleCompass() {
@@ -52,18 +52,18 @@
 
 <!-- Compass Navigation -->
 <div class="compass-nav" id="compassNav">
-    <a href="art.html" class="compass-btn compass-north">
-        <span>Art</span>
-    </a>
-    <a href="projects.html" class="compass-btn compass-east">
-        <span>Projects</span>
-    </a>
-    <a href="contact.html" class="compass-btn compass-south">
-        <span>Contact</span>
-    </a>
-    <a href="about.html" class="compass-btn compass-west">
-        <span>About</span>
-    </a>
+            <a href="art" class="compass-btn compass-north">
+            <span>Art</span>
+        </a>
+        <a href="projects" class="compass-btn compass-east">
+            <span>Projects</span>
+        </a>
+        <a href="contact" class="compass-btn compass-south">
+            <span>Contact</span>
+        </a>
+        <a href="about" class="compass-btn compass-west">
+            <span>About</span>
+        </a>
 </div>
 
 <!-- Cursor Glow Effect -->
