--- a/projects.html
+++ b/projects.html
@@ -37,23 +37,23 @@
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="art.html" class="header-nav-button">
+                <a href="art" class="header-nav-button">
                     <span>Art</span>
                 </a>
             </li>
             <li>
-                <a href="projects.html" class="header-nav-button" style="color:#ffffff">
+                <a href="projects" class="header-nav-button" style="color:#ffffff">
                     <span>[Projects]</span>
                 </a>
             </li>
 
             <li>
-                <a href="contact.html" class="header-nav-button">
+                <a href="contact" class="header-nav-button">
                     <span>Contact</span>
                 </a>
             </li>
             <li>
-                <a href="about.html" class="header-nav-button">
+                <a href="about" class="header-nav-button">
                     <span>About</span>
                 </a>
             </li>
@@ -65,7 +65,7 @@
     </div>
     <script>
         function mainMenu() {
-            window.location.href="index.html";
+            window.location.href="/";
         }
 
         // Header scroll behavior
@@ -179,15 +179,15 @@
 
 
 <div class="projects3">
-    <a href="dutch.html">
+    <a href="dutch">
     <img src="projectimages/dlclogo.png" style="width:170px; height:100px; margin-top:10px; margin-bottom: -2px" class="projectimages">
     </a>
-    <a href="dutch.html">
+    <a href="dutch">
         <h3 class="project">
             UChicago Dutch Language Circle
         </h3>
     </a>
-    <a href="dutch.html">
+    <a href="dutch">
         <h4 class="project1">
             Weekly Dutch language learning club for all levels. We meet Wednesdays at 7:00PM in Crerar 010B
         </h4>
@@ -213,15 +213,15 @@
 </div>
 
 <div class="projects5blog">
-    <a href="blog.html">
+    <a href="blog">
     <img src="projectimages/expologo.png" style="width:100px; height:100px;" class="projectimages">
     </a>
-    <a href="blog.html">
+    <a href="blog">
         <h3 class="project">
             Blog
         </h3>
     </a>
-    <a href="blog.html">
+    <a href="blog">
         <h4 class="project1">
             Maps and guides
         </h4>
