--- a/art.html
+++ b/art.html
@@ -13,23 +13,23 @@
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="art.html" class="header-nav-button" style="color:#ffffff">
+                <a href="art" class="header-nav-button" style="color:#ffffff">
                     <span>[Art]</span>
                 </a>
             </li>
             <li>
-                <a href="projects.html" class="header-nav-button">
+                <a href="projects" class="header-nav-button">
                     <span>Projects</span>
                 </a>
             </li>
 
             <li>
-                <a href="contact.html" class="header-nav-button">
+                <a href="contact" class="header-nav-button">
                     <span>Contact</span>
                 </a>
             </li>
             <li>
-                <a href="about.html" class="header-nav-button">
+                <a href="about" class="header-nav-button">
                     <span>About</span>
                 </a>
             </li>
@@ -41,9 +41,9 @@
     </div>
 
 <script>
-    function mainMenu() {
-        window.location.href = "index.html";
-}
+            function mainMenu() {
+            window.location.href = "/";
+    }
 
 window.addEventListener("scroll", function() {
     var backToTopButton = document.getElementById("backToTopButton");
