--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,22 @@
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="art.html" class="header-nav-button">
+                <a href="art" class="header-nav-button">
                     <span>Art</span>
                 </a>
             </li>
             <li>
-                <a href="projects.html" class="header-nav-button">
+                <a href="projects" class="header-nav-button">
                     <span>Projects</span>
                 </a>
             </li>
             <li>
-                <a href="contact.html" class="header-nav-button" style="color:#ffffff">
+                <a href="contact" class="header-nav-button" style="color:#ffffff">
                     <span>[Contact]</span>
                 </a>
             </li>
             <li>
-                <a href="about.html" class="header-nav-button">
+                <a href="about" class="header-nav-button">
                     <span>About</span>
                 </a>
             </li>
@@ -40,7 +40,7 @@
     </div>
     <script>
         function mainMenu() {
-            window.location.href = "index.html";
+            window.location.href = "/";
     }
     </script>
 
