--- a/dutch.html
+++ b/dutch.html
@@ -13,22 +13,22 @@
         <br class="topbit">
         <div class="header-nav">
             <li>
-                <a href="art.html" class="header-nav-button">
+                <a href="art" class="header-nav-button">
                     <span>Art</span>
                 </a>
             </li>
             <li>
-                <a href="projects.html" class="header-nav-button">
+                <a href="projects" class="header-nav-button">
                     <span style="color:#ffffff">[Projects]</span>
                 </a>
             </li>
             <li>
-                <a href="contact.html" class="header-nav-button">
+                <a href="contact" class="header-nav-button">
                     <span>Contact</span>
                 </a>
             </li>
             <li>
-                <a href="about.html" class="header-nav-button">
+                <a href="about" class="header-nav-button">
                     <span>About</span>
                 </a>
             </li>
@@ -41,10 +41,10 @@
     
     <script>
         function mainMenu() {
-            window.location.href="index.html";
+            window.location.href="/";
         }
         function backToProjects() {
-            window.location.href="projects.html";
+            window.location.href="projects";
         }
         
         let slideIndex = 1;
