--- a/blog.html
+++ b/blog.html
@@ -116,6 +116,16 @@
         
         <div class="blog-content">
             <div class="blog-post">
+                <a href="https://docs.google.com/presentation/d/16V9TGh3Xi9RxhmywWtWF7uJGD1IbTwxljtGcyvS2lPA/edit?usp=sharing" target="_blank">
+                    <img src="blogimages/100 Architects of the Modern Era you Should Know (1).png" alt="100 Architects of the Modern Era You Should Know" class="blog-image">
+                </a>
+                <h2 class="blog-post-title">100 Architects of the Modern Era You Should Know</h2>
+                <p class="blog-post-description">A Google Slides presentation.</p>
+                <a href="https://docs.google.com/presentation/d/16V9TGh3Xi9RxhmywWtWF7uJGD1IbTwxljtGcyvS2lPA/edit?usp=sharing" class="blog-link" target="_blank">
+                    View Slides →
+                </a>
+            </div>
+            <div class="blog-post">
                 <a href="https://docs.google.com/document/d/1ssXRvUfDrAz_ceeasqqQIbIVrfkhRyDdM6GjQzH0e5Q/edit?usp=sharing" target="_blank">
                     <img src="projectimages/guidetony.png" alt="Guide to New York" class="blog-image">
                 </a>
